adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -218,6 +218,17 @@
   timestamp = {2012.07.27},
 }
 
+@Book{Aho1974,
+  title     = {The Design and Analysis of Computer Algorithms},
+  publisher = {Addison-Wesley Longman Publishing},
+  year      = {1974},
+  author    = {Aho, A. V. and Hopcroft, J. E.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+  url       = {http://dl.acm.org/citation.cfm?id=578775},
+}
+
 @InProceedings{Aiello2011,
   author    = {Aiello, L. M. and Donato, D. and Ozertem, U. and Menczer, F.},
   title     = {Behavior-driven clustering of queries into topics},
@@ -383,6 +394,21 @@
 }
 
 @Article{Aldecoa2013,
+  author    = {Aldecoa, R. and Marín, I.},
+  title     = {Surprise maximization reveals the community structure of complex networks},
+  journal   = {Scientific Reports},
+  year      = {2013},
+  volume    = {3},
+  pages     = {1060},
+  doi       = {10.1038/srep01060},
+  file      = {:Surprise maximization reveals the community structure of complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  review    = {http://arxiv.org/abs/1301.0239},
+  timestamp = {2013.01.08},
+}
+
+@Article{Aldecoa2013a,
   author    = {Aldecoa, R. and Marín, I.},
   title     = {Exploring the limits of community detection strategies in complex networks},
   journal   = {Scientific Reports},
@@ -588,7 +614,7 @@
   institution = {Department of Computer Science, Rensselaer Polytechnic Institute},
   year        = {2011},
   file        = {:Community Detection in Signed Networks.pdf:PDF},
-  groups      = {Not Found},
+  groups      = {Done Manually},
   owner       = {Vincent},
   timestamp   = {2012.01.10},
   url         = {http://assassin.cs.rpi.edu/~magdon/courses/casp/projects/Anchuri.pdf},
@@ -1455,6 +1481,33 @@
   owner     = {Vincent},
   timestamp = {2016.03.23},
   url       = {http://arxiv.org/abs/1603.06878},
+}
+
+@Article{Beineke1978,
+  author    = {Beineke, L. W. and Harary, F.},
+  title     = {Consistency in marked digraphs},
+  journal   = {Journal of Mathematical Psychology},
+  year      = {1978},
+  volume    = {18},
+  pages     = {260-269},
+  doi       = {10.1016/0022-2496(78)90054-8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
+@Article{Beineke1978a,
+  author    = {Beineke, L. W. and Harary, F.},
+  title     = {Consistent graphs with signed points},
+  journal   = {Rivista di Matematica per le Scienze Economiche e Sociali},
+  year      = {1978},
+  volume    = {1},
+  number    = {2},
+  pages     = {81-88},
+  doi       = {10.1007/bf02631374},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
 }
 
 @InProceedings{Bejerano2003,
@@ -3471,6 +3524,20 @@
   timestamp = {2010.10.05},
 }
 
+@Article{Clauset2009,
+  author    = {Clauset, A. and Shalizi, C. R. and Newman, M. E. J.},
+  title     = {Power-Law Distributions in Empirical Data},
+  journal   = {SIAM Review},
+  year      = {2009},
+  volume    = {51},
+  number    = {4},
+  pages     = {661-703},
+  doi       = {10.1137/070710111},
+  groups    = {Others, Book},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+}
+
 @Article{Clerc2002,
   author    = {Clerc, M. and Kennedy, J.},
   title     = {The particle swarm - explosion, stability, and convergence in a multidimensional complex space},
@@ -4399,7 +4466,7 @@
   author    = {Doreian, P. and Batagelj, V. and Ferligoj, A.},
   address   = {New York, US-NY},
   file      = {:Generalized Blockmodeling.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Book},
   owner     = {Vincent},
   timestamp = {2010.12.31},
   url       = {http://books.google.com/books?id=-q59yzR6LGAC&printsec=frontcover&dq=Doreian+Generalized+Blockmodeling&hl=en&src=bmrr&ei=SJ4dTbX8Mcm14Abn_bGGAg&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCMQ6AEwAA#v=onepage&q&f=false},
@@ -5973,6 +6040,21 @@
   timestamp = {2017.07.14},
 }
 
+@Article{Gleiser2003,
+  author    = {Gleiser, P. M. and Danon, L.},
+  title     = {Community Structure in Jazz},
+  journal   = {Advances in Complex Systems},
+  year      = {2003},
+  volume    = {6},
+  number    = {4},
+  pages     = {565-573},
+  doi       = {10.1142/S0219525903001067},
+  file      = {:Community Structure in Jazz.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.06.18},
+}
+
 @Article{Glpinar2004,
   author    = {Gülpinar, N. and Gutin, G. and Mitra, G. and Zverovitch, A.},
   title     = {Extracting pure network submatrices in linear programs using signed graphs},
@@ -6753,6 +6835,18 @@
   timestamp = {2017.05.21},
 }
 
+@Book{Harary1969,
+  title     = {Graph Theory},
+  publisher = {Addison-Wesley},
+  year      = {1969},
+  author    = {Harary, F.},
+  file      = {:Graph Theory 1969.pdf:PDF},
+  groups    = {Graph Theory, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.05.17},
+  url       = {http://www.dtic.mil/dtic/tr/fulltext/u2/705364.pdf},
+}
+
 @Article{Harary1979,
   author    = {Harary, F. and Kommel, H. J.},
   title     = {Matrix measures for transitivity and balance},
@@ -6778,9 +6872,22 @@
   pages     = {131-136},
   doi       = {10.1016/0165-4896(80)90010-4},
   file      = {:A simple algorithm to detect balance in signed graphs.pdf:PDF},
-  groups    = {Just balance, Not Found},
+  groups    = {Just balance, Done Manually},
   owner     = {Vincent},
   timestamp = {2017.04.09},
+}
+
+@Article{Harary1981,
+  author    = {Harary, F. and Kabell, J. A.},
+  title     = {Counting balanced signed graphs using marked graphs},
+  journal   = {Proceedings of the Edinburgh Mathematical Society},
+  year      = {1981},
+  volume    = {24},
+  pages     = {99-104},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.20},
+  url       = {https://www.cambridge.org/core/services/aop-cambridge-core/content/view/S0013091500006398},
 }
 
 @Article{Harary2002,
@@ -7397,6 +7504,20 @@
   timestamp = {2017.07.02},
 }
 
+@Article{Hu2015b,
+  author    = {Hu, F. an Liu, Y.},
+  title     = {A new algorithm CNM-Centrality of detecting communities based on node centrality},
+  journal   = {Physica A},
+  year      = {2016},
+  volume    = {446},
+  pages     = {138-151},
+  doi       = {10.1016/j.physa.2015.10.083},
+  file      = {:A new algorithm CNM-Centrality of detecting communities based on node centrality.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.12.08},
+}
+
 @Article{Hu2017,
   author    = {Hu, F. and Zhu, Y. and Shi, Y. and Cai, J. and Chen, L. and Shen, S.},
   title     = {An algorithm Walktrap-SPM for detecting overlapping community structure},
@@ -7406,7 +7527,7 @@
   pages     = {1750121},
   doi       = {10.1142/S0217979217501211},
   file      = {:An algorithm Walktrap-SPM for detecting overlapping community structure.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2017.04.01},
 }
@@ -7917,6 +8038,21 @@
   timestamp = {2017.07.10},
 }
 
+@Article{Ji2013,
+  author    = {Ji, J. and Song, X. and Liu, C. and Zhang, X.},
+  title     = {Ant colony clustering with fitness perception and pheromone diffusion for community detection in complex networks},
+  journal   = {Physica A},
+  year      = {2013},
+  volume    = {392},
+  number    = {15},
+  pages     = {3260-3272},
+  doi       = {10.1016/j.physa.2013.04.001},
+  file      = {:Ant colony clustering with fitness perception and pheromone diffusion for community detection in complex networks.pdf:PDF},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2013.04.15},
+}
+
 @Article{Jia2011,
   author    = {Jia, Y. and Zhang, J. and Huan, J.},
   title     = {An efficient graph-mining method for complicated and noisy data with real-world applications},
@@ -7944,6 +8080,21 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2011.03.29},
+}
+
+@Article{Jiang2014,
+  author    = {Jiang, Y. and Jia, C. and Yu, J.},
+  title     = {An efficient community detection algorithm using greedy surprise maximization},
+  journal   = {Journal of Physics A},
+  year      = {2014},
+  volume    = {47},
+  number    = {16},
+  pages     = {165101},
+  doi       = {10.1088/1751-8113/47/16/165101},
+  file      = {:An efficient community detection algorithm using greedy surprise maximization.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.04.10},
 }
 
 @Article{Jiang2015,
@@ -10083,6 +10234,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.18},
 }
 
+@Article{Liu2010d,
+  author    = {Liu, X. and Murata, T.},
+  title     = {Advanced modularity-specialized label propagation algorithm for detecting communities in networks},
+  journal   = {Physica A},
+  year      = {2010},
+  volume    = {389},
+  number    = {7},
+  pages     = {1493-1500},
+  doi       = {10.1016/j.physa.2009.12.019},
+  file      = {:Advanced modularity-specialized label propagation algorithm for detecting communities in networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.07.27},
+}
+
 @InProceedings{Liu2010i,
   author    = {Liu, J. and Zhong, W. and Abbass, H. A. and Green, D. G.},
   title     = {Separated and overlaping community detection in complex networks using multiobjectiive evolutionary algorithms},
@@ -10584,6 +10750,22 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Malliaros2013,
+  author    = {Malliaros, F. D. and Vazirgiannis, M.},
+  title     = {Clustering and Community Detection in Directed Networks: A Survey},
+  journal   = {Physics Reports},
+  year      = {2013},
+  volume    = {533},
+  number    = {4},
+  pages     = {95-142},
+  doi       = {10.1016/j.physrep.2013.08.002},
+  file      = {:Clustering and Community Detection in Directed Networks- A Survey.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  review    = {http://arxiv.org/abs/1308.0971},
+  timestamp = {2013.08.09},
 }
 
 @Article{Mandel1983,
@@ -11536,6 +11718,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.15},
+}
+
+@Article{Narayanan2014,
+  author    = {Narayanan, T. and Subramaniam, S.},
+  title     = {A Newtonian Framework for Community Detection in Undirected Biological Networks},
+  journal   = {IEEE Transactions on Biomedical Circuits and Systems},
+  year      = {2014},
+  volume    = {8},
+  number    = {1},
+  pages     = {65-73},
+  doi       = {10.1109/TBCAS.2013.2288155},
+  file      = {:A Newtonian Framework for Community Detection in Undirected Biological Networks.pdf:PDF},
+  groups    = {Physical, Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.03.11},
 }
 
 @Article{Nascimento2010,
@@ -15221,7 +15418,7 @@ old title: The map equation and the resolution limit in community detection},
   series    = {Springer Theses},
   doi       = {10.1007/978-3-319-06391-1},
   file      = {:Algorithms and Dynamical Models for Communities and Reputation in Social Networks.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2014.06.19},
 }
@@ -17307,6 +17504,7 @@ old title: The map equation and the resolution limit in community detection},
 2 ExplicitGroup:Found\;0\;;
 2 ExplicitGroup:Done Manually\;0\;;
 2 ExplicitGroup:Not Found\;0\;;
+2 ExplicitGroup:Book\;0\;;
 2 ExplicitGroup:Ignored\;0\;;
 }
 
