adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -3399,6 +3399,20 @@
   timestamp = {2012.07.30},
 }
 
+@Article{Chiang2007,
+  author    = {Chiang, C. and Kahng, A. B. and Sinha, S. and Xu, X. and Zelikovsky, A. Z.},
+  title     = {Fast and Efficient Bright-Field {AAPSM} Conflict Detection and Correction},
+  journal   = {IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  year      = {2007},
+  volume    = {26},
+  number    = {1},
+  pages     = {115-126},
+  doi       = {10.1109/tcad.2006.882642},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
+}
+
 @InProceedings{Chiang2011,
   author    = {Chiang, K.-Y. and Natarajan, N. and Tewari, A. and Dhillon, I. S.},
   title     = {Exploiting longer cycles for link prediction in signed networks},
@@ -3492,6 +3506,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{CIMASONI2001,
+  author    = {Cimasono, D.},
+  title     = {Computing the Writhe of a Knot},
+  journal   = {Journal of Knot Theory and Its Ramifications},
+  year      = {2001},
+  volume    = {10},
+  number    = {3},
+  pages     = {387-395},
+  doi       = {10.1142/s0218216501000913},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
 }
 
 @Article{Clauset2004,
@@ -4341,6 +4369,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Doli2007,
+  author    = {Došlić, T. and Vukičević, D.},
+  title     = {Computing the bipartite edge frustration of fullerene graphs},
+  journal   = {Discrete Applied Mathematics},
+  year      = {2007},
+  volume    = {155},
+  number    = {10},
+  pages     = {1294-1301},
+  doi       = {10.1016/j.dam.2006.12.003},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
 }
 
 @Article{Donetti2004,
@@ -6540,6 +6582,21 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Guimera2006,
+  author    = {Guimerà, R. and Danon, L. and Díaz-Guilera, A. and Giralt, F. and Arenas, A.},
+  title     = {The real communication network behind the formal chart: Community structure in organizations},
+  journal   = {Journal of Economic Behaviour and Organization},
+  year      = {2006},
+  volume    = {61},
+  number    = {4},
+  pages     = {653-667},
+  doi       = {10.1016/j.jebo.2004.07.021},
+  file      = {:The real communication network behind the formal chart.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.11.19},
+}
+
 @Article{Guimera2009,
   author    = {Guimerà, R. and Sales-Pardo, M.},
   title     = {Missing and spurious interactions and the reconstruction of complex networks},
@@ -6596,6 +6653,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Hadlock1975,
+  author    = {Hadlock, F.},
+  title     = {Finding a Maximum Cut of a Planar Graph in Polynomial Time},
+  journal   = {SIAM Journal on Computing},
+  year      = {1975},
+  volume    = {4},
+  number    = {3},
+  pages     = {221-225},
+  doi       = {10.1137/0204019},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
 }
 
 @Article{HafnerBurton2009,
@@ -8363,6 +8434,34 @@
   timestamp = {2012.08.28},
 }
 
+@Article{Kasteleyn1963,
+  author    = {Kasteleyn, P. W.},
+  title     = {Dimer Statistics and Phase Transitions},
+  journal   = {Journal of Mathematical Physics},
+  year      = {1963},
+  volume    = {4},
+  number    = {2},
+  pages     = {287-293},
+  doi       = {10.1063/1.1703953},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
+}
+
+@Article{Katai1978,
+  author    = {Katai, O. and Iwai, S.},
+  title     = {Studies on the balancing, the minimal balancing, and the minimum balancing processes for social groups with planar and nonplanar graph structures},
+  journal   = {Journal of Mathematical Psychology},
+  year      = {1978},
+  volume    = {18},
+  number    = {2},
+  pages     = {140-176},
+  doi       = {10.1016/0022-2496(78)90060-3},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
+}
+
 @Article{Katz1953,
   author    = {Katz, L.},
   title     = {A new status index derived from sociometric analysis},
@@ -8757,6 +8856,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Article{Klotz2013,
+  author    = {Klotz, E. and Newman, A. M.},
+  title     = {Practical guidelines for solving difficult mixed integer linear programs},
+  journal   = {Surveys in Operations Research and Management Science},
+  year      = {2013},
+  volume    = {18},
+  number    = {1-2},
+  pages     = {18-32},
+  doi       = {10.1016/j.sorms.2012.12.001},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
 }
 
 @InProceedings{Knowles,
@@ -11168,6 +11281,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.11},
   url       = {http://dl.acm.org/citation.cfm?id=2074140},
+}
+
+@InProceedings{Mendonca2015,
+  author        = {Mendonça, I. and Figueiredo, R. and Labatut, V. and Michelon, P.},
+  title         = {Relevance of Negative Links in Graph Partitioning: A Case Study Using Votes From the European Parliament},
+  booktitle     = {2nd European Network Intelligence Conference (ENIC)},
+  year          = {2015},
+  pages         = {122-129},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/ENIC.2015.25},
+  file          = {:Relevance of Negative Links in Graph Partitioning- A Case Study Using Votes From the European Parliament.pdf:PDF},
+  groups        = {Graph Partitioning, _To do},
+  owner         = {Vincent},
+  timestamp     = {2015.07.10},
 }
 
 @Article{Mennes2013,
@@ -14309,6 +14436,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2010.08.10},
+}
+
+@Article{Sherrington1975,
+  author    = {Sherrington, D. and Kirkpatrick, S.},
+  title     = {Solvable Model of a Spin-Glass},
+  journal   = {Physical Review Letters},
+  year      = {1975},
+  volume    = {35},
+  number    = {26},
+  pages     = {1792-1796},
+  doi       = {10.1103/physrevlett.35.1792},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.21},
 }
 
 @InProceedings{Shi1997,
