adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1372,6 +1372,21 @@
   timestamp = {2011.03.23},
 }
 
+@Article{Barrat2004,
+  author    = {Barrat, A. and Barthelemy, M. and Pastor-Satorras, R. and Vespignani, A.},
+  title     = {The architecture of complex weighted networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2004},
+  volume    = {101},
+  number    = {11},
+  pages     = {3747-3752},
+  doi       = {10.1073/pnas.0400087101},
+  file      = {:The architecture of complex weighted networks.pdf:PDF},
+  groups    = {Weighted Links, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+}
+
 @Article{Barthelemy2005,
   author    = {Barthélemy, M. and Barrat, A. and Pastor-Satorras, R. and Vespignani, A.},
   title     = {Characterization and modeling of weighted networks},
@@ -3754,6 +3769,18 @@
   owner     = {Vincent},
   timestamp = {2017.07.16},
   url       = {http://projecteuclid.org/euclid.im/1109190962},
+}
+
+@InProceedings{Ciglan2013,
+  author    = {Ciglan, Marek and Laclavík, Michal and Nørvåg, Kjetil},
+  title     = {On Community Detection in Real-World Networks and the Importance of Degree Assortativity},
+  booktitle = {ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  year      = {2013},
+  file      = {:On Community Detection in Real-World Networks and the Importance of Degree Assortativity.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2013.08.15},
+  url       = {http://www.idi.ntnu.no/~noervaag/papers/KDD2013.pdf},
 }
 
 @Article{Ciliberti2005,
@@ -6383,6 +6410,20 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Ghosh2011,
+  author    = {Ghosh, S. and Banerjee, A. and Sharma, N. and Agarwal, S. and Ganguly, N. and Bhattacharya, S. and Mukherjee, A.},
+  title     = {Statistical analysis of the indian railway network: a complex network approach},
+  journal   = {Acta Physica Polonica B Proceedings Supplement},
+  year      = {2011},
+  volume    = {4},
+  number    = {2},
+  pages     = {123-138},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+  url       = {https://inis.iaea.org/search/search.aspx?orig_q=RN:42076135},
+}
+
 @Article{Ghosn2004,
   author    = {Ghosn, F. and Palmer, G. and Bremer, S.},
   title     = {The MID3 Data Set, 1993–2001: Procedures, Coding Rules, and Description},
@@ -6899,6 +6940,21 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Gregory2010,
+  author    = {Gregory, S.},
+  title     = {Finding overlapping communities in networks by label propagation},
+  journal   = {New Journal of Physics},
+  year      = {2010},
+  volume    = {12},
+  number    = {10},
+  pages     = {103018},
+  doi       = {10.1088/1367-2630/12/10/103018},
+  file      = {:Finding overlapping communities in networks by label propagation.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.01.01},
+}
+
 @Book{Gropp1998,
   title     = {MPI - The Complete Reference},
   publisher = {MIT Press},
@@ -6952,6 +7008,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.12.31},
+}
+
+@Article{Guevenir1998,
+  author    = {Güvenir, H. A. and Demiröz, G. and İlter, N.},
+  title     = {Learning differential diagnosis of erythemato-squamous diseases using voting feature intervals},
+  journal   = {Artificial Intelligence in Medicine},
+  year      = {1998},
+  volume    = {13},
+  number    = {3},
+  pages     = {147-165},
+  doi       = {10.1016/s0933-3657(98)00028-1},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
 }
 
 @InProceedings{Guha2004,
@@ -7939,6 +8009,17 @@
   timestamp = {2017.07.20},
 }
 
+@Book{Horvath2011,
+  title     = {Weighted Network Analysis},
+  publisher = {Springer},
+  year      = {2011},
+  author    = {Horvath, S.},
+  doi       = {10.1007/978-1-4419-8819-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+}
+
 @Article{Hotelling1929,
   author    = {Hotelling, H.},
   title     = {Stability in Competition},
@@ -8711,6 +8792,19 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.12.23},
+}
+
+@InProceedings{Jin2011c,
+  author    = {Jin, J. and Pan, L. and Wang, C. and Xie, J.},
+  title     = {A Center-Based Community Detection Method in Weighted Networks},
+  booktitle = {23rd IEEE International Conference on Tools with Artificial Intelligence},
+  year      = {2011},
+  pages     = {513-518},
+  doi       = {10.1109/ICTAI.2011.83},
+  file      = {:A Center-based Community Detection Method In Weighted Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.01.10},
 }
 
 @Article{Jin2013,
@@ -9548,6 +9642,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.05.10},
 }
 
+@Article{KONG2011,
+  author    = {Kong, L.-Q. and Yang, M.-L.},
+  title     = {Improvement of clustering algorithm {FEC} for signed networks},
+  journal   = {Journal of Computer Applications},
+  year      = {2011},
+  volume    = {31},
+  number    = {5},
+  pages     = {1395-1399},
+  doi       = {10.3724/sp.j.1087.2011.01395},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+}
+
 @Article{Koontz1975,
   author    = {Koontz, W. L. G. and Narendra, P. M. and Fukunaga, K.},
   title     = {A Branch and Bound Clustering Algorithm},
@@ -10075,6 +10183,21 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@Article{Lancichinetti2009,
+  author    = {Lancichinetti, A. and Fortunato, S.},
+  title     = {Benchmarks for testing community detection algorithms on directed and weighted graphs with overlapping communities},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {80},
+  number    = {1},
+  pages     = {016118},
+  doi       = {10.1103/PhysRevE.80.016118},
+  file      = {:Benchmarks for testing community detection algorithms on directed and weighted graphs with overlapping communities.pdf:PDF},
+  groups    = {LFR Wi/C, Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Lancichinetti2009a,
   author    = {Lancichinetti, A. and Fortunato, S.},
   title     = {Community detection algorithms: a comparative analysis},
@@ -10387,6 +10510,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.09.10},
+}
+
+@InProceedings{Leskovec2010,
+  author    = {Leskovec, J. and Lang, K. J. and Mahoney, M.},
+  title     = {Empirical comparison of algorithms for network community detection},
+  booktitle = {19th international conference on World Wide Web},
+  year      = {2010},
+  pages     = {631-640},
+  doi       = {10.1145/1772690.1772755},
+  file      = {:Empirical Comparison of Algorithms for Network Community Detection.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.02.08},
 }
 
 @InProceedings{Leskovec2010b,
@@ -12186,6 +12322,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://www.jstor.org/stable/2676814},
 }
 
+@Article{Michalski1980,
+  author    = {Michalski, R. S. and Chilausky, R. L.},
+  title     = {Learning by being told and learning from examples: An experimental comparison of the two methods of knowledge acquisition in the context of developing an expert system for soybean disease diagnosis},
+  journal   = {International Journal of Policy Analysis and Information Systems},
+  year      = {1980},
+  volume    = {4},
+  number    = {2},
+  pages     = {125-161},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+  url       = {http://www.mli.gmu.edu/papers/79-80/80-2.pdf},
+}
+
 @Article{Michel2010,
   author    = {Michel, J.-B. and Shen, Y. K. and Aiden, A. P. and Veres, A. and Gray, M. K. and Pickett, J. P. and Hoiberg, D. and Clancy, D. and Norvig, P. and Orwant, J. and Pinker, S. and Nowak, M. A. and Aiden, E. L.},
   title     = {Quantitative Analysis of Culture Using Millions of Digitized Books},
@@ -13311,6 +13461,18 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://arxiv.org/abs/1608.01771},
 }
 
+@TechReport{Page1998,
+  author      = {Page, L. and Brin, S. and Motwani, R. and Winograd, T.},
+  title       = {The PageRank citation ranking: bringing order to the Web},
+  institution = {Stanford InfoLab},
+  year        = {1998},
+  file        = {:The PageRank citation ranking- bringing order to the Web.pdf:PDF},
+  groups      = {Others, Ignored},
+  owner       = {Vincent},
+  timestamp   = {2012.08.24},
+  url         = {http://ilpubs.stanford.edu:8090/422/},
+}
+
 @Article{Pal2000,
   author    = {Pal, S. K. and De, R. K. and Basak, J.},
   title     = {Unsupervised feature evaluation: a neuro-fuzzy approach},
@@ -13986,6 +14148,19 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2015.07.04},
   url       = {http://dl.acm.org/citation.cfm?id=3045483},
+}
+
+@InProceedings{Qi2012,
+  author    = {Qi, G.-J. and Aggarwal, C. and Huang, T.},
+  title     = {Community Detection with Edge Content in Social Media Networks},
+  booktitle = {IEEE International Conference on Data Engineering},
+  year      = {2012},
+  address   = {Washington, US-DC},
+  doi       = {10.1109/ICDE.2012.77},
+  file      = {:Community Detection with Edge Content in Socia lMedia Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.04.11},
 }
 
 @Article{Qi2016,
@@ -16691,6 +16866,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@InProceedings{Tzortzis2012,
+  author    = {Tzortzis, G. and Likas, A.},
+  title     = {Kernel-Based Weighted Multi-view Clustering},
+  booktitle = {12th IEEE International Conference on Data Mining},
+  year      = {2012},
+  doi       = {10.1109/icdm.2012.43},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.24},
+}
+
 @Book{Uitermark2012,
   title     = {Dynamics of Power in Dutch Integration Politics: From Accommodation to Confrontation},
   publisher = {Amsterdam University Press},
@@ -17098,6 +17284,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning},
   owner     = {Vincent},
   timestamp = {2017.07.20},
+}
+
+@InProceedings{Wang2013q,
+  author    = {Wang, C.-D. and Lai, J.-H. and Yu, P. S.},
+  title     = {Dynamic Community Detection in Weighted Graph Streams},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2013},
+  pages     = {151-161},
+  doi       = {10.1137/1.9781611972832.17},
+  file      = {:Dynamic Community Detection in Weighted Graph Streams.pdf:PDF},
+  groups    = {Datasets, Ignored},
+  owner     = {Vincent},
+  timestamp = {2013.12.26},
 }
 
 @Article{Wang2013t,
@@ -17778,7 +17977,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2014},
   pages     = {150-156},
   file      = {:Community Detecting in Signed Networks based on Modularity.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2014.11.15},
   url       = {http://www.wseas.us/e-library/conferences/2014/Lisbon/TAMAM/TAMAM-22.pdf},
@@ -18521,6 +18720,21 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.22},
+}
+
+@Article{Zhang2016a,
+  author    = {Zhang, H. and Wang, C.-D. and Lai, J.-H. and Yu, P. S.},
+  title     = {Modularity in Complex Multilayer Networks with Multiple Aspects: A Static Perspective},
+  journal   = {Applied Informatics},
+  year      = {2017},
+  volume    = {4},
+  pages     = {7},
+  doi       = {10.1186/s40535-017-0035-4},
+  file      = {:Modularity in complex multilayer networks with multiple aspects- a static perspective.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2016.05.28},
+  url       = {http://arxiv.org/abs/1605.06190},
 }
 
 @Article{Zhao2011,
